--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Tip calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -13,26 +14,61 @@
 </head>
 <body>
 
-  Bill
+  <div class="main-container">
+    <div class="title-container">
+      <h2>Spli</h2>
+      <h2>Tter</h2>
+    </div>
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+    <div class="tip-container">
+      <div class="input-area">
+        <div class="bill-container number-input-container">
+          <p for="bill-label" class="input-labels">Bill</p>
+          <div class="bill-input inputarea-inputs">
+            <img src="/images/icon-dollar.svg" alt="dollar-icon">
+            <input type="text" name="bill-input" id="bill-input" placeholder="0" aria-placeholder="0">
+          </div>
+        </div>
+        <div class="select-tip">
+          <p class="input-labels select-label">Select Tip %</p>
+          <div class="grid-container">
+            <button class="tip-percentages">5%</button>
+            <button class="tip-percentages">10%</button>
+            <button class="tip-percentages">15%</button>
+            <button class="tip-percentages">25%</button>
+            <button class="tip-percentages">50%</button>
+            <input class="tip-percentages custom-input" type="text" placeholder="Custom">
+          </div>
+        </div>
+        <div class="num-of-people">
+          <p for="num-of-people" class="input-labels">Number of People</p>
+          <div class="people-input inputarea-inputs">
+            <img src="/images/icon-person.svg" alt="person-icon">
+            <input type="text" name="num-of-people" id="num-of-people" placeholder="0" aria-placeholder="0">
+          </div>
+        </div>
+      </div>
+      <div class="result-area">
+        <div class="tip-amount result-containers">
+          <div class="main-text-container">
+            <div class="text-container">
+              <h3 class="result-headers">Tip Amount</h3>
+              <p class="result-p">/ person</p>
+            </div>
+            <span class="spans" id="amount-person">$0.00</span>
+          </div>
 
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-
+           <div class="main-text-container">
+            <div class="text-container">
+              <h3 class="result-headers">Total</h3>
+              <p class="result-p">/ person</p>
+            </div>
+            <span class="spans" id="total-person">$0.00</span>
+            </div>
+          </div>
+        <button class="reset-btn" id="reset-btn">RESET</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
