--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
   <div class="main-container">
+
     <div class="title-container">
       <h2>Spli</h2>
       <h2>Tter</h2>
@@ -65,10 +66,12 @@
             </div>
             <span class="spans" id="total-person">$0.00</span>
             </div>
-          </div>
+        </div>
         <button class="reset-btn" id="reset-btn">RESET</button>
       </div>
     </div>
   </div>
+
+  <script type="module" src="script.js"></script>
 </body>
 </html>
